refactor: remover informações sensíveis dos appsettings

--- a/src/Location404.Data.API/appsettings.json
+++ b/src/Location404.Data.API/appsettings.json
@@ -8,14 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GeoDataDatabase": "Host=181.215.135.221;Port=5434;Database=geodataservice;Username=lcoation404;Password=hbylsxuri8b1msem"
+    "GeoDataDatabase": "Host=localhost;Port=5434;Database=location404_geodata;Username=postgres;Password=your_password_here"
   },
   "RabbitMQ": {
     "Enabled": true,
-    "HostName": "location404-rabbitmq-8b2418-181-215-135-221.traefik.me",
+    "HostName": "localhost",
     "Port": 5672,
     "UserName": "admin",
-    "Password": "rqtisgqs",
+    "Password": "your_password_here",
     "VirtualHost": "/",
     "ExchangeName": "game-events",
     "MatchEndedQueue": "match-ended",
