--- a/src/Location404.Data.API/Location404.Data.API.csproj
+++ b/src/Location404.Data.API/Location404.Data.API.csproj
@@ -12,6 +12,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Location404.Shared.Observability" Version="0.0.4"/>
   </ItemGroup>
 
   <ItemGroup>
