fix: remover connection string hardcoded

--- a/src/Location404.Data.API/appsettings.json
+++ b/src/Location404.Data.API/appsettings.json
@@ -1,14 +1,61 @@
 {
+  "OpenTelemetry": {
+    "ServiceName": "location404-data",
+    "ServiceVersion": "0.0.1",
+    "ServiceNamespace": "data",
+    "CollectorEndpoint": "http://181.215.135.221:4317",
+    "EnableConsoleExporter": false,
+    "ResourceAttributes": {
+      "team": "location404",
+      "application": "geo-data"
+    },
+    "Tracing": {
+      "Enabled": true,
+      "SamplingRatio": 0.1,
+      "RecordExceptions": true,
+      "EnableGrpcSupport": false,
+      "IgnorePaths": [
+        "/health",
+        "/metrics",
+        "/ready",
+        "/live",
+        "/swagger"
+      ],
+      "IgnoreHosts": [
+        "localhost",
+        "127.0.0.1"
+      ],
+      "BatchExport": {
+        "MaxQueueSize": 2048,
+        "ScheduledDelayMilliseconds": 5000,
+        "ExporterTimeoutMilliseconds": 30000,
+        "MaxExportBatchSize": 512
+      }
+    },
+    "Metrics": {
+      "Enabled": true,
+      "CustomMeters": [
+        "Location404.Data.*"
+      ]
+    },
+    "Logging": {
+      "Enabled": true,
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "OpenTelemetry": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GeoDataDatabase": "Host=localhost;Port=5434;Database=location404_geodata;Username=postgres;Password=your_password_here"
+    "GeoDataDatabase": ""
   },
   "RabbitMQ": {
     "Enabled": true,
