--- a/src/Location404.Data.Infrastructure/Location404.Data.Infrastructure.csproj
+++ b/src/Location404.Data.Infrastructure/Location404.Data.Infrastructure.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
   </ItemGroup>
 
   <PropertyGroup>
